--- a/elt_llm_ingest/config/rag_config.yaml
+++ b/elt_llm_ingest/config/rag_config.yaml
@@ -2,7 +2,7 @@
 
 # ChromaDB settings
 chroma:
-  persist_dir: "./chroma_db"
+  persist_dir: "../chroma_db"
   tenant: "rag_tenants"
   database: "knowledge_base"
 
@@ -11,13 +11,13 @@ ollama:
   base_url: "http://localhost:11434"
   embedding_model: "nomic-embed-text"
   llm_model: "llama3.2"
-  embed_batch_size: 10
+  embed_batch_size: 1
   context_window: 4096
 
 # Chunking settings
 chunking:
   strategy: "sentence"  # or "semantic"
-  chunk_size: 1024
+  chunk_size: 256
   chunk_overlap: 200
   sentence_split_threshold: 0.5
 
