--- a/elt_llm_query/examples/dama_only.yaml
+++ b/elt_llm_query/examples/dama_only.yaml
@@ -6,9 +6,11 @@ collections:
 
 # Query settings
 query:
-  similarity_top_k: 5
+  similarity_top_k: 10
   system_prompt: |
     You are a helpful assistant that answers questions based on the DAMA-DMBOK data management body of knowledge.
     Always ground your answers in the retrieved content.
     Prefer using DAMA-DMBOK terminology when answering.
+    When the documents clearly list items (such as chapters, steps, or roles), enumerate them explicitly.
+    When the documents only partially describe something, say that the list may be incomplete and explain what is stated.
     If the information is not available in the documents, say so clearly.
