--- a/elt_llm_query/examples/fa_handbook_only.yaml
+++ b/elt_llm_query/examples/fa_handbook_only.yaml
@@ -6,8 +6,9 @@ collections:
 
 # Query settings
 query:
-  similarity_top_k: 5
+  similarity_top_k: 15
   system_prompt: |
-    You are a helpful assistant that answers questions based on the Financial Accounting Handbook.
+    You are a helpful assistant that answers questions based on the Football Association (FA) Handbook.
     Always ground your answers in the retrieved content.
+    When the documents clearly list items (such as names, roles, or rules), enumerate them explicitly.
     If the information is not available in the documents, say so clearly.
