--- a/elt_llm_core/pyproject.toml
+++ b/elt_llm_core/pyproject.toml
@@ -10,6 +10,7 @@ dependencies = [
     "llama-index-embeddings-ollama>=0.3.0",
     "llama-index-llms-ollama>=0.4.0",
     "llama-index-vector-stores-chroma>=0.4.0",
+    "llama-index-retrievers-bm25>=0.3.0",
     "chromadb>=0.6.0",
     "ollama>=0.3.0",
     "pyyaml>=6.0",
