--- a/elt_llm_ingest/config/ingest_fa_ea_sad.yaml
+++ b/elt_llm_ingest/config/ingest_fa_ea_sad.yaml
@@ -1,6 +1,6 @@
 # Ingestion Config: SAD (Solution Architecture Definition)
 
-collection_name: "sad"
+collection_name: "fa_ea_sad"
 
 # Documents to ingest
 file_paths:
