--- a/elt_llm_ingest/pyproject.toml
+++ b/elt_llm_ingest/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "elt-llm-core>=0.1.0",
     "llama-index>=0.12.0",
     "llama-index-readers-file>=0.4.0",
+    "python-pptx>=0.6.23",
 ]
 
 [project.scripts]
