--- a/elt_llm_query/examples/leanix_fa_combined.yaml
+++ b/elt_llm_query/examples/leanix_fa_combined.yaml
@@ -6,12 +6,20 @@
 #   - Data catalogue questions spanning both sources
 #   - Logical/physical model planning grounded in FA structure
 
-# Collections to query (searches across both)
 collections:
-  - name: "fa_ea_leanix"
+  - name: "fa_leanix_overview"
+  - name: "fa_leanix_additional_entities"
+  - name: "fa_leanix_relationships"
+  - name: "fa_leanix_agreements"
+  - name: "fa_leanix_campaign"
+  - name: "fa_leanix_location"
+  - name: "fa_leanix_product"
+  - name: "fa_leanix_reference_data"
+  - name: "fa_leanix_static_data"
+  - name: "fa_leanix_time_bounded_groupings"
+  - name: "fa_leanix_transaction_and_events"
   - name: "fa_handbook"
 
-# Query settings
 query:
   similarity_top_k: 10
   system_prompt: |
