--- a/elt_llm_query/examples/vendor_assessment.yaml
+++ b/elt_llm_query/examples/vendor_assessment.yaml
@@ -1,18 +1,22 @@
 # Query Config: Vendor Assessment Focus (LeanIX + Supplier Assessment)
 
-# Collections to query
 collections:
-  - name: "fa_ea_leanix"
+  - name: "fa_leanix_relationships"
     weight: 1.0
+  - name: "fa_leanix_additional_entities"
+    weight: 1.0
+  - name: "fa_leanix_product"
+    weight: 1.0
+  - name: "fa_leanix_agreements"
+    weight: 0.8
   - name: "supplier_assess"
     weight: 1.0
 
-# Query settings
 query:
   similarity_top_k: 10
   system_prompt: |
     You are a helpful assistant that answers questions based on vendor assessment documentation.
-    The documents include LeanIX platform docs and Supplier Assessment guidelines.
+    The documents include the FA LeanIX Enterprise Conceptual Data Model and Supplier Assessment guidelines.
     Always ground your answers in the retrieved content.
     Cite the source when relevant.
     If the information is not available in the documents, say so clearly.
