--- a/elt_llm_query/llm_rag_profile/all_collections.yaml
+++ b/elt_llm_query/llm_rag_profile/all_collections.yaml
@@ -3,37 +3,13 @@
 
 collections:
   - name: "dama_dmbok"
-    weight: 1.0
   - name: "fa_handbook"
-    weight: 1.0
   - name: "fa_data_architecture"
-    weight: 1.0
-  - name: "fa_leanix_overview"
-    weight: 1.0
-  - name: "fa_leanix_additional_entities"
-    weight: 1.0
-  - name: "fa_leanix_relationships"
-    weight: 1.0
-  - name: "fa_leanix_agreements"
-    weight: 1.0
-  - name: "fa_leanix_campaign"
-    weight: 1.0
-  - name: "fa_leanix_location"
-    weight: 1.0
-  - name: "fa_leanix_product"
-    weight: 1.0
-  - name: "fa_leanix_reference_data"
-    weight: 1.0
-  - name: "fa_leanix_static_data"
-    weight: 1.0
-  - name: "fa_leanix_time_bounded_groupings"
-    weight: 1.0
-  - name: "fa_leanix_transaction_and_events"
-    weight: 1.0
   - name: "fa_ea_sad"
-    weight: 1.0
   - name: "supplier_assess"
-    weight: 1.0
+
+collection_prefixes:
+  - name: "fa_leanix"
 
 query:
   similarity_top_k: 15
