--- a/elt_llm_query/llm_rag_profile/leanix_fa_combined.yaml
+++ b/elt_llm_query/llm_rag_profile/leanix_fa_combined.yaml
@@ -7,18 +7,10 @@
 #   - Logical/physical model planning grounded in FA structure
 
 collections:
-  - name: "fa_leanix_overview"
-  - name: "fa_leanix_additional_entities"
-  - name: "fa_leanix_relationships"
-  - name: "fa_leanix_agreements"
-  - name: "fa_leanix_campaign"
-  - name: "fa_leanix_location"
-  - name: "fa_leanix_product"
-  - name: "fa_leanix_reference_data"
-  - name: "fa_leanix_static_data"
-  - name: "fa_leanix_time_bounded_groupings"
-  - name: "fa_leanix_transaction_and_events"
   - name: "fa_handbook"
+
+collection_prefixes:
+  - name: "fa_leanix"
 
 query:
   similarity_top_k: 10
