--- a/elt_llm_query/llm_rag_profile/leanix_only.yaml
+++ b/elt_llm_query/llm_rag_profile/leanix_only.yaml
@@ -1,23 +1,12 @@
 # Query Config: LeanIX Enterprise Conceptual Data Model — All Sections
 #
-# Queries all fa_leanix_* collections produced by the split preprocessor.
-# Use this for general questions about the FA conceptual model.
+# Uses collection_prefixes to dynamically include all fa_leanix_* collections.
+# New domains added during ingestion are picked up automatically.
 #
 # For targeted relationship queries, use: leanix_relationships.yaml
-# For party/entity queries, use: leanix_entities.yaml
 
-collections:
-  - name: "fa_leanix_overview"
-  - name: "fa_leanix_additional_entities"
-  - name: "fa_leanix_relationships"
-  - name: "fa_leanix_agreements"
-  - name: "fa_leanix_campaign"
-  - name: "fa_leanix_location"
-  - name: "fa_leanix_product"
-  - name: "fa_leanix_reference_data"
-  - name: "fa_leanix_static_data"
-  - name: "fa_leanix_time_bounded_groupings"
-  - name: "fa_leanix_transaction_and_events"
+collection_prefixes:
+  - name: "fa_leanix"
 
 query:
   similarity_top_k: 10
