--- a/elt_llm_core/pyproject.toml
+++ b/elt_llm_core/pyproject.toml
@@ -11,6 +11,7 @@ dependencies = [
     "llama-index-llms-ollama>=0.4.0",
     "llama-index-vector-stores-chroma>=0.4.0",
     "llama-index-retrievers-bm25>=0.3.0",
+    "sentence-transformers>=3.0.0",
     "chromadb>=0.6.0",
     "ollama>=0.3.0",
     "pyyaml>=6.0",
