--- a/elt_llm_ingest/config/rag_config.yaml
+++ b/elt_llm_ingest/config/rag_config.yaml
@@ -10,7 +10,7 @@ chroma:
 ollama:
   base_url: "http://localhost:11434"
   embedding_model: "nomic-embed-text"  # keep this, it's good
-  llm_model: "qwen2.5:14b"     # ~9GB — excellent instruction following
+  llm_model: "qwen2.5:14b"      # ~9GB — strong document synthesis and instruction following
   embed_batch_size: 1
   context_window: 8192          # enough for 10-15 retrieved chunks
 
