--- a/elt_llm_api/pyproject.toml
+++ b/elt_llm_api/pyproject.toml
@@ -7,6 +7,8 @@ requires-python = ">=3.11,<3.14"
 dependencies = [
     "elt-llm-core>=0.1.0",
     "elt-llm-query>=0.1.0",
+    "elt-llm-ingest>=0.1.0",
+    "gradio>=4.0",
 ]
 
 [build-system]
@@ -22,3 +24,4 @@ dev = [
 [tool.uv.sources]
 elt-llm-core = { workspace = true }
 elt-llm-query = { workspace = true }
+elt-llm-ingest = { workspace = true }
