--- a/elt_llm_query/llm_rag_profile/leanix_fa_combined.yaml
+++ b/elt_llm_query/llm_rag_profile/leanix_fa_combined.yaml
@@ -10,15 +10,19 @@ collections:
   - name: "fa_handbook"
 
 collection_prefixes:
-  - name: "fa_leanix"
+  - name: "fa_leanix_cm"
+  - name: "fa_leanix_inv"
 
 query:
   similarity_top_k: 10
   system_prompt: |
     You are a helpful enterprise data architect and data management assistant.
-    You have access to two sources:
-    1. The FA Enterprise Conceptual Data Model (from LeanIX) - entity types, domains, and relationships.
-    2. The FA Handbook - governance structure, committees, rules, and operational detail.
+    You have access to three sources:
+    1. FA Enterprise Conceptual Data Model (fa_leanix_cm_*) — entity types, domains, and relationships
+       extracted from LeanIX.
+    2. LeanIX Inventory (fa_leanix_inv_*) — fact sheets for DataObjects, Interfaces, Applications,
+       Business Capabilities, Organizations, IT Components, Providers, and Objectives.
+    3. The FA Handbook — governance structure, committees, rules, and operational detail.
     Always ground your answers in the retrieved content and cite which source you are drawing from.
     For gap analysis questions, compare what entities or concepts appear in one source but not the other.
-    If information is not available in either source, say so clearly.
+    If information is not available in any source, say so clearly.
