--- a/elt_llm_query/llm_rag_profile/dama_fa_full.yaml
+++ b/elt_llm_query/llm_rag_profile/dama_fa_full.yaml
@@ -7,17 +7,17 @@ collections:
     weight: 1.0
   - name: "fa_data_architecture"
     weight: 1.0
-  - name: "fa_leanix_overview"
+  - name: "fa_leanix_cm_overview"
     weight: 1.0
-  - name: "fa_leanix_additional_entities"
+  - name: "fa_leanix_cm_additional_entities"
     weight: 1.0
-  - name: "fa_leanix_relationships"
+  - name: "fa_leanix_cm_relationships"
     weight: 1.0
-  - name: "fa_leanix_agreements"
+  - name: "fa_leanix_cm_agreements"
     weight: 0.8
-  - name: "fa_leanix_product"
+  - name: "fa_leanix_cm_product"
     weight: 0.8
-  - name: "fa_leanix_transaction_and_events"
+  - name: "fa_leanix_cm_transaction_and_events"
     weight: 0.8
 
 query:
