--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ elt-llm-api = { workspace = true }
 
 [dependency-groups]
 dev = [
+    "openpyxl>=3.1.5",
     "pytest>=9.0.2",
     "pytest-cov>=4.0.0",
 ]
