--- a/elt_llm_query/llm_rag_profile/leanix_fa_combined.yaml
+++ b/elt_llm_query/llm_rag_profile/leanix_fa_combined.yaml
@@ -10,17 +10,17 @@ collections:
   - name: "fa_handbook"
 
 collection_prefixes:
-  - name: "fa_leanix_cm"
-  - name: "fa_leanix_inv"
+  - name: "fa_leanix_dat_enterprise_conceptual_model"
+  - name: "fa_leanix_global_inventory"
 
 query:
   similarity_top_k: 10
   system_prompt: |
     You are a helpful enterprise data architect and data management assistant.
     You have access to three sources:
-    1. FA Enterprise Conceptual Data Model (fa_leanix_cm_*) — entity types, domains, and relationships
+    1. FA Enterprise Conceptual Data Model (fa_leanix_dat_enterprise_conceptual_model_*) — entity types, domains, and relationships
        extracted from LeanIX.
-    2. LeanIX Inventory (fa_leanix_inv_*) — fact sheets for DataObjects, Interfaces, Applications,
+    2. LeanIX Global Inventory (fa_leanix_global_inventory_*) — fact sheets for DataObjects, Interfaces, Applications,
        Business Capabilities, Organizations, IT Components, Providers, and Objectives.
     3. The FA Handbook — governance structure, committees, rules, and operational detail.
     Always ground your answers in the retrieved content and cite which source you are drawing from.
