--- a/elt_llm_query/llm_rag_profile/dama_fa_full.yaml
+++ b/elt_llm_query/llm_rag_profile/dama_fa_full.yaml
@@ -7,18 +7,10 @@ collections:
     weight: 1.0
   - name: "fa_data_architecture"
     weight: 1.0
-  - name: "fa_leanix_dat_enterprise_conceptual_model_overview"
-    weight: 1.0
-  - name: "fa_leanix_dat_enterprise_conceptual_model_additional_entities"
-    weight: 1.0
-  - name: "fa_leanix_dat_enterprise_conceptual_model_relationships"
-    weight: 1.0
-  - name: "fa_leanix_dat_enterprise_conceptual_model_agreements"
-    weight: 0.8
-  - name: "fa_leanix_dat_enterprise_conceptual_model_product"
-    weight: 0.8
-  - name: "fa_leanix_dat_enterprise_conceptual_model_transaction_and_events"
-    weight: 0.8
+
+collection_prefixes:
+  - name: "fa_leanix"
+
 
 query:
   similarity_top_k: 15
