--- a/elt_llm_query/llm_rag_profile/fa_data_management.yaml
+++ b/elt_llm_query/llm_rag_profile/fa_data_management.yaml
@@ -21,8 +21,7 @@ collections:
   - name: "dama_dmbok"
 
 collection_prefixes:
-  - name: "fa_leanix_dat_enterprise_conceptual_model"
-  - name: "fa_leanix_global_inventory"
+  - name: "fa_leanix"
 
 query:
   similarity_top_k: 15
