--- a/elt_llm_query/llm_rag_profile/leanix_fa_combined.yaml
+++ b/elt_llm_query/llm_rag_profile/leanix_fa_combined.yaml
@@ -10,8 +10,7 @@ collections:
   - name: "fa_handbook"
 
 collection_prefixes:
-  - name: "fa_leanix_dat_enterprise_conceptual_model"
-  - name: "fa_leanix_global_inventory"
+  - name: "fa_leanix"
 
 query:
   similarity_top_k: 10
