--- a/elt_llm_query/llm_rag_profile/leanix_only.yaml
+++ b/elt_llm_query/llm_rag_profile/leanix_only.yaml
@@ -6,9 +6,9 @@
 #
 # For targeted relationship queries, use: leanix_relationships.yaml
 
+
 collection_prefixes:
-  - name: "fa_leanix_dat_enterprise_conceptual_model"
-  - name: "fa_leanix_global_inventory"
+  - name: "fa_leanix"
 
 query:
   similarity_top_k: 10
